# kuan-hao-web

./: .gitignore  DEPLOYMENT.md  README.md  docker-compose.yml
.github/workflows/: deploy.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/migrations/: 20240207120000_init.sql  20240207120001_ensure_messages.sql
backend/src/: handlers.rs  main.rs  state.rs
frontend/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json
frontend/content/posts/: first-post-eng.md  first-post.md
frontend/src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
frontend/src/app/api/backend/[...path]/: route.ts
frontend/src/app/blog/: BlogList.tsx  page.tsx
frontend/src/app/posts/[slug]/: page.tsx
frontend/src/app/projects/: page.tsx
frontend/src/components/: DashboardModal.tsx
frontend/src/components/home/: BioBlock.tsx  ContactBlock.tsx  LatestArticlesBlock.tsx  LatestArticlesList.tsx  PhotoBlock.tsx  TechStackBlock.tsx
frontend/src/components/ui/: AuroraBackground.tsx  BackgroundWrapper.tsx  InteractiveBackground.tsx  MotionCard.tsx  ParticleNetwork.tsx
frontend/src/lib/: api.ts  posts.ts
